@@ -1,7 +1,7 @@
 ###########################################################################
 ##
 ## File:        etc/Makefile.am
-## Versions:    $Id: Makefile.am,v 1.2 2002/06/14 21:57:03 rkowen Exp $
+## Versions:    $Id: Makefile.am,v 1.3 2005/12/05 16:38:08 rkowen Exp $
 ## Created:     2002/06/14
 ##
 ###########################################################################
@@ -9,5 +9,24 @@
 
 AUTOMAKE_OPTIONS=foreign dejagnu no-installinfo
 
-bin_SCRIPTS = add.modules mkroot
+EXTRA_scripts = add.modules mkroot
 
+install-data-local : $(EXTRA_scripts)
+	$(mkinstalldirs) $(DESTDIR)$(prefix)/bin
+	@list='$(EXTRA_scripts)'; for p in $$list; do \
+	  if test -f $$p \
+	  ; then \
+	   echo " $(INSTALL_PROGRAM_ENV) $(INSTALL_PROGRAM) $$p $(DESTDIR)$(prefix)/bin/$$p"; \
+	   $(INSTALL_PROGRAM_ENV) $(INSTALL_PROGRAM) $$p $(DESTDIR)$(prefix)/bin/$$p; \
+	  else :; fi; \
+	done
+
+uninstall-local :
+	@list='$(EXTRA_scripts)'; for p in $$list; do \
+	  echo " rm -f $(DESTDIR)$(prefix)/bin/$$p"; \
+	  rm -f $(DESTDIR)$(prefix)/bin/$$p; \
+	done
+
+check :
+
+clean :
